--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </p>
         </div>   
         
-        <img src="images/logo.png" alt="logo" id="logo" class="img-fluid float-right col-sm-6 col-xl-5 py-0 px-3 m-0">  
+        <img src="images/logo.PNG" alt="logo" id="logo" class="img-fluid float-right col-sm-6 col-xl-5 py-0 px-3 m-0">  
 
         <div class="row justify-content-center col-4">
             <img src="images/pen.png" alt="pen image" id="pen" class="img-fluid col-4 d-none d-xl-block"> <!--Image from parkerpen.com-->
