--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!--Ambition-->
         <div class="card d-inline-block col-xl-6 float-xl-left bg-transparent">
             <h2 class="h3 my-4 p-2">Ambition</h2>
-            <img src="https://assets.codepen.io/8139164/fingerSilhouette.jpeg" alt="Inspirational Sunrise Silhouette" class="portrait img-fluid ml-sm-4 col-sm-3 col-xl-5 p-0 float-sm-right mb-1" id="fingerSilhouette">
+            <img src="images/fingerSilhouette.jpeg" alt="Inspirational Sunrise Silhouette" class="portrait img-fluid ml-sm-4 col-sm-3 col-xl-5 p-0 float-sm-right mb-1" id="fingerSilhouette">
             <p>I am fascinated by how data and AI can be used to solve industrial and societal problems. My dad first introduced me to Python, and I taught myself to code in Swift. I have
                 won awards for coding related competitions and have written programmes related to analytics including using simulation to generate the optimal Blackjack strategy table.
                 I aspire a career in the Computer Sciences and Data Analytics industry.
@@ -137,7 +137,7 @@
         <!--Further Education-->
         <div class="card d-inline-block col-xl-6 float-xl-left bg-transparent">
             <h3 class="my-4 p-2">Further Education</h3>
-            <img src="https://assets.codepen.io/8139164/gardenByTheBaySunrise.jpeg" alt="Sunrise at Garden by the Bay" class="portrait img-fluid ml-sm-4 col-sm-3 col-xl-5 p-0 float-sm-right mb-1">
+            <img src="images/gardenByTheBaySunrise.jpeg" alt="Sunrise at Garden by the Bay" class="portrait img-fluid ml-sm-4 col-sm-3 col-xl-5 p-0 float-sm-right mb-1">
             <p>I plan to further my studies in the National University of Singapore where I would get a degree.
                 I will likely join a Business course where I would learn more about data analytics
                 as well as business strategies and practices. 
@@ -147,7 +147,7 @@
         <!--Career Prospect-->
         <div class="card d-inline-block col-xl-12 float-xl-left bg-transparent">
             <h3 class="my-4 p-2">Career Prospect</h3>
-            <img src="https://assets.codepen.io/8139164/merlionPhoto.jpeg" alt="Merlion photo" class="landscape img-fluid ml-sm-4 col-sm-7 col-xl-4 p-0 float-sm-right mb-1">
+            <img src="images/merlionPhoto.jpeg" alt="Merlion photo" class="landscape img-fluid ml-sm-4 col-sm-7 col-xl-4 p-0 float-sm-right mb-1">
             <p id="careerProspect">I foresee myself having a career as a software developer or as a data analyst.
                  After gaining enough work experience, I would also try to start or join a business startup.
                  This would allow me to put my experience and knowledge in the field to its best use.
