--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>About me</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/layout.css">
-    <style>body > header {background-image: url(/images/homeMoonlight.jpeg);}</style>
+    <!-- <style>body > header {background-image: url("/images/homeMoonlight.jpeg");}</style> -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
